Added calculation of n-grams and longest commom sentence
Small improvement in the jupyter notebook by calculating n-grams and lcs.

--- a/Drosophila.ipynb
+++ b/Drosophila.ipynb
@@ -599,34 +599,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def create_containment_features(df, n, file = \"genome.fa\"):\n",
-    "    for seq_record in SeqIO.parse(folder+file, \"fasta\"):\n",
-    "    #print(\"Length: {:,d}\".format(len(seq_record))) \n",
-    "    lengths.append(len(seq_record))\n",
+    "def create_containment_features(sequences, n):\n",
+    "    \n",
     "    containment_values = []\n",
     "    \n",
-    "    if(column_name==None):\n",
-    "        column_name = 'c_'+str(n) # c_1, c_2, .. c_n\n",
-    "    \n",
-    "    # iterates through dataframe rows\n",
-    "    for i in df.index:\n",
-    "        file = df.loc[i, 'File']\n",
-    "        # Computes features using calculate_containment function\n",
-    "        if df.loc[i,'Category'] > -1:\n",
-    "            c = calculate_containment(df, n, file)\n",
+    "    # iterates through sequences\n",
+    "    for i, seqA in enumerate(sequences):\n",
+    "        for j, seqB in enumerate(sequences[i+1:]):\n",
+    "            c = calculate_containment(seqA, seqB, n)\n",
     "            containment_values.append(c)\n",
-    "        # Sets value to -1 for original tasks \n",
-    "        else:\n",
-    "            containment_values.append(-1)\n",
     "    \n",
     "    print(str(n)+'-gram containment features created!')\n",
     "    return containment_values\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_lcs_features(sequences):\n",
+    "    \n",
+    "    lcs_values = []\n",
+    "    \n",
+    "    for i, seqA in enumerate(sequences):\n",
+    "        for j, seqB in enumerate(sequences[i+1:]):\n",
+    "            # calculate lcs\n",
+    "            lcs = lcs_norm_word(seqA, seqB)\n",
+    "            lcs_values.append(lcs)\n",
+    "            \n",
+    "    print('LCS features created!')\n",
+    "    return lcs_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5613\n"
+     ]
+    }
+   ],
+   "source": [
+    "strseq = []\n",
+    "for seq in sequences:\n",
+    "    try:\n",
+    "        strseq.append(str(seq.seq))\n",
+    "    except:\n",
+    "        try:\n",
+    "            strseq.append(str(seq))\n",
+    "        except:\n",
+    "            pass\n",
+    "print(len(strseq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ngram_range = range(1,10)\n",
+    "\n",
+    "features_list = []\n",
+    "\n",
+    "all_features = np.zeros((len(ngram_range)+1, \n",
+    "                         len(sequences)*(len(sequences)-1)//2))\n",
+    "\n",
+    "# Calculate features for containment for ngrams in range\n",
+    "i=0\n",
+    "for n in ngram_range:\n",
+    "    column_name = 'c_'+str(n)\n",
+    "    features_list.append(column_name)\n",
+    "    # create containment features\n",
+    "    all_features[i]=np.squeeze(create_containment_features(strseq, n))\n",
+    "    i+=1\n",
+    "\n",
+    "# Calculate features for LCS_Norm Words \n",
+    "features_list.append('lcs_word')\n",
+    "all_features[i]= np.squeeze(create_lcs_features(strseq))\n",
+    "\n",
+    "# create a features dataframe\n",
+    "features_df = pd.DataFrame(np.transpose(all_features), columns=features_list)\n",
+    "\n",
+    "# Print all features/columns\n",
+    "print()\n",
+    "print('Features: ', features_list)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
